[package]
name = "nginx-accesslog-count"
version = "0.1.0"
edition = "2021"
authors = ["Emanuel Claesson <emanuel.claesson@gmail.com>"]
homepage = "https://github.com/EClaesson/nginx-accesslog-count"
repository = "https://github.com/EClaesson/nginx-accesslog-count"
license = "MIT"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
humansize = "2.1.3"
humantime = "2.1.0"
indexmap = "2.4.0"
rayon = "1.10.0"
regex = "1.10.6"
wild = "2.2.1"
